--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,19 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip"]
+nixPkgs = ["python311", "python311Packages.pip", "python311Packages.virtualenv"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = [
+  "python -m venv /opt/venv",
+  "source /opt/venv/bin/activate",
+  "pip install --upgrade pip",
+  "pip install -r requirements.txt"
+]
 
 [phases.build]
-cmds = ["python -c 'import main'"]
+cmds = [
+  "source /opt/venv/bin/activate",
+  "python -c 'import main'"
+]
+
+[start]
+cmd = "source /opt/venv/bin/activate && gunicorn --worker-class eventlet -w 1 --bind 0.0.0.0:$PORT main:app"
