--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ websocket-client>=1.6.0,<2.0.0
 psutil>=5.9.0
 ta>=0.10.0
 eventlet>=0.33.0
-gunicorn>=21.0.0 
+gunicorn>=21.0.0
+virtualenv>=20.0.0 
