--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -16,4 +16,4 @@ cmds = [
 ]
 
 [start]
-cmd = "source /opt/venv/bin/activate && gunicorn --worker-class eventlet -w 1 --bind 0.0.0.0:$PORT main:app"
+cmd = "python railway_start.py"
