--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pybit>=5.8.0
 flask-socketio>=5.3.0,<6.0.0
 python-dotenv>=1.0.0,<2.0.0
 websocket-client>=1.6.0,<2.0.0
+websockets>=11.0.0,<12.0.0
 psutil>=5.9.0
 ta>=0.10.0
 eventlet>=0.33.0
